<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >


        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/First_name"
                    android:textColor="@color/MyProfileTextColor"
                    android:textSize="@dimen/_16sdp" />

                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle_shape"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/black"
                    android:paddingBottom="@dimen/_12sdp"
                    android:textColor="@color/MyProfileTextColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/Last_name"
                    android:textColor="@color/MyProfileTextColor"
                    android:textSize="@dimen/_16sdp" />

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle_shape"
                    android:paddingTop="@dimen/_12sdp"
                    android:textColorHint="@color/black"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:textColor="@color/MyProfileTextColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/Email"
                    android:textColor="@color/MyProfileTextColor"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle_shape"
                    android:hint="email"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:textColorHint="@color/black"
                    android:paddingBottom="@dimen/_12sdp"
                    android:textColor="@color/MyProfileTextColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/Phone"
                    android:textColor="@color/MyProfileTextColor"
                    android:textSize="@dimen/_16sdp" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle_shape"
                    android:paddingTop="@dimen/_12sdp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="phone"
                    android:textColorHint="@color/black"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:textColor="@color/MyProfileTextColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/City"
                    android:textColor="@color/MyProfileTextColor"
                    android:textSize="@dimen/_16sdp" />

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle_shape"
                    android:paddingTop="@dimen/_12sdp"
                    android:textColorHint="@color/black"
                    android:paddingLeft="@dimen/_8sdp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingBottom="@dimen/_12sdp"
                    android:textColor="@color/MyProfileTextColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/State"
                    android:textColor="@color/MyProfileTextColor"
                    android:textSize="@dimen/_16sdp" />

                <EditText
                    android:id="@+id/et_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle_shape"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/black"
                    android:paddingBottom="@dimen/_12sdp"
                    android:textColor="@color/MyProfileTextColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/Zip"
                    android:textColor="@color/MyProfileTextColor"
                    android:textSize="@dimen/_16sdp" />

                <EditText
                    android:id="@+id/et_Zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="number"
                    android:background="@drawable/rectangle_shape"
                    android:paddingTop="@dimen/_12sdp"
                    android:textColorHint="@color/black"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:textColor="@color/MyProfileTextColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/Address1"
                    android:textColor="@color/MyProfileTextColor"
                    android:textSize="@dimen/_16sdp" />

                <EditText
                    android:id="@+id/et_address1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle_shape"
                    android:paddingTop="@dimen/_12sdp"
                    android:textColorHint="@color/black"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:textColor="@color/MyProfileTextColor" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/Address2"
                    android:textColor="@color/MyProfileTextColor"
                    android:textSize="@dimen/_16sdp" />

                <EditText
                    android:id="@+id/et_address2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle_shape"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:textColorHint="@color/black"
                    android:paddingBottom="@dimen/_12sdp"
                    android:textColor="@color/MyProfileTextColor" />
                <TextView
                    android:id="@+id/tvAddSignature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/rectangle_btn_shape"
                    android:gravity="center"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="Add Signature"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/rectangle_btn_shape"
                    android:gravity="center"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="Save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:textColorHint="@color/black"
                    android:paddingBottom="@dimen/_12sdp"
                    android:textColor="@color/MyProfileTextColor" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
